ant-demo/codepkg/objects/Batch_Events__e.object
<CustomObject>
    <fields>
        <fullName>Event_Info__c</fullName>
        <label>Event Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Publisher__c</fullName>
        <label>Event Publisher</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Ids__c</fullName>
        <label>Record_Ids</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Batch Event</label>
    <pluralLabel>Batch Events</pluralLabel>
</CustomObject>